--- a/pom.xml
+++ b/pom.xml
@@ -15,13 +15,22 @@
         <slf4j.version>1.7.2</slf4j.version>
         <log4j.version>1.2.17</log4j.version>
         <user.dir>D\:\\jdk8\\jre\\bin</user.dir>
+        <junit.version>4.9</junit.version>
+        <mysql-connector-java.version>5.1.34</mysql-connector-java.version>
+        <druid.version>1.0.2</druid.version>
+        <mybatis.version>3.2.2</mybatis.version>
+        <mybatis-spring.version>1.1.1</mybatis-spring.version>
+        <servlet-api.version>2.5</servlet-api.version>
+        <maven-compiler-plugin.source>1.7</maven-compiler-plugin.source>
+        <maven-compiler-plugin.target>1.7</maven-compiler-plugin.target>
+        <standard.version>1.1.2</standard.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.9</version>
+            <version>${junit.version}</version>
         </dependency>
 
         <dependency>
@@ -37,37 +46,34 @@
             <version>${slf4j.version}</version>
         </dependency>
 
-
-
-
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.34</version>
+            <version>${mysql-connector-java.version}</version>
         </dependency>
         <!--数据库用alibaba的开源druid-->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
-            <version>1.0.2</version>
+            <version>${druid.version}</version>
         </dependency>
 
 
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
-            <version>3.2.2</version>
+            <version>${mybatis.version}</version>
         </dependency>
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis-spring</artifactId>
-            <version>1.1.1</version>
+            <version>${mybatis-spring.version}</version>
         </dependency>
 
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
-            <version>2.5</version>
+            <version>${servlet-api.version}</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -77,7 +83,7 @@
         <dependency>
             <groupId>taglibs</groupId>
             <artifactId>standard</artifactId>
-            <version>1.1.2</version>
+            <version>${standard.version}</version>
         </dependency>
 
         <!--Spring 核心组件-->
@@ -177,8 +183,8 @@
                 <plugin>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <configuration>
-                        <source>1.7</source>
-                        <target>1.7</target>
+                        <source>${maven-compiler-plugin.source}</source>
+                        <target>${maven-compiler-plugin.target}</target>
                     </configuration>
                     <version>2.5.1</version>
                 </plugin>
